syntax = "proto3";

package storage;

option go_package = "/storage";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

// Common message types shared across services

// TenantID represents a unique tenant identifier
message TenantID {
  string id = 1;
}

// EntityID represents a unique entity identifier
message EntityID {
  string id = 1;
}

// RecordID represents a unique record identifier
message RecordID {
  TenantID tenant_id = 1;
  EntityID entity_id = 2;
  int64 version = 3;
}

// SchemaID represents a schema identifier
message SchemaID {
  TenantID tenant_id = 1;
  string name = 2;
  int32 version = 3;
}

// DataRecord represents a data record
message DataRecord {
  RecordID id = 1;
  google.protobuf.Struct data = 2;
  SchemaID schema = 3;
  google.protobuf.Timestamp timestamp = 4;
  int64 version = 5;
  map<string, string> metadata = 6;
}

// Location represents the physical location of data
message Location {
  string file_id = 1;
  int64 offset = 2;
  int64 length = 3;
  int32 row_group = 4;
  bool compressed = 5;
}

// TimeRange represents a time range filter
message TimeRange {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
}

// QueryFilter represents a filter condition
message QueryFilter {
  string column = 1;
  string operator = 2;  // "eq", "ne", "gt", "gte", "lt", "lte", "in", "not_in"
  google.protobuf.Value value = 3;
}

// Status represents operation status
message Status {
  int32 code = 1;
  string message = 2;
  repeated string details = 3;
}

// Health check messages
message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
  ServingStatus status = 1;
  string message = 2;
  google.protobuf.Timestamp timestamp = 3;
}

// Metrics and monitoring
message Metrics {
  int64 records_ingested = 1;
  int64 queries_processed = 2;
  int64 storage_size_bytes = 3;
  int64 index_size_bytes = 4;
  double cpu_usage_percent = 5;
  double memory_usage_percent = 6;
  int64 active_connections = 7;
  google.protobuf.Timestamp last_updated = 8;
}
